# dioxus-tsne

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yml
app/: Cargo.toml  Dioxus.toml  build.rs
app/assets/examples/: cora.parquet  mnist_1k.parquet
app/public/: robots.txt  site.webmanifest  sitemap.xml
app/public/dioxus-decompositions/: decompositions_worker.js  loader.js
app/src/: main.rs
scripts/: build-worker.sh  serve_isolated.py
src/: color.rs  components.rs  compute.rs  ingest.rs  lib.rs  messages.rs  pca.rs  plot.rs  style.css  worker.rs
tests/: compute.rs  ingest.rs  pca.rs
worker/: Cargo.toml
worker/src/: main.rs
