[workspace]
members = ["app", "worker"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/LucaCappelletti94/dioxus-decompositions"

[workspace.dependencies]
dioxus = "0.7"
gloo-worker = "0.6"
serde = { version = "1", features = ["derive"] }
# No exact pin needed: the worker bundle is post-processed by the
# wasm-bindgen-cli-support library (see app/build.rs), which the shared
# lockfile keeps at the same version as this crate.
wasm-bindgen = "0.2"

[package]
name = "dioxus-tsne"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dioxus + WebAssembly components to run and visualize Barnes-Hut t-SNE in the browser, off the main thread in a web worker"
readme = "README.md"
keywords = ["dioxus", "tsne", "pca", "visualization", "wasm"]
categories = ["visualization", "wasm", "gui"]

[features]
default = ["parquet"]
# Parquet ingestion through the Arrow reader. Snappy is the only compression
# enabled: it is the Parquet default, and the gzip backend (flate2) does not
# build on wasm32-unknown-unknown.
parquet = [
    "dep:arrow-array",
    "dep:arrow-cast",
    "dep:arrow-schema",
    "dep:bytes",
    "dep:parquet",
]

[dependencies]
arrow-array = { version = "58", optional = true }
arrow-cast = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
bhtsne = { git = "https://github.com/frjnn/bhtsne", default-features = false, features = ["wasm_js"] }
bytes = { version = "1", optional = true }
csv = "1"
dioxus.workspace = true
dioxus-free-icons = { version = "0.10.0", default-features = false, features = [
    "font-awesome-solid",
    "font-awesome-brands",
] }
gloo-net = { version = "0.7.0", default-features = false, features = ["http"] }
gloo-worker.workspace = true
js-sys = "0.3"
# Already pulled in transitively by bhtsne, declared directly so the worker can
# report rayon's global pool size (the active thread count) back to the UI.
rayon = "1"
nalgebra = "0.35.0"
parquet = { version = "58", default-features = false, features = [
    "arrow",
    "snap",
], optional = true }
send_wrapper = "0.6.0"
serde.workspace = true
wasm-bindgen.workspace = true
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobEvent",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaStream",
    "Url",
    "Window",
] }

[dev-dependencies]
serde_json = "1.0.150"
