[workspace]
members = ["app", "worker"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/LucaCappelletti94/dioxus-decompositions"

[workspace.dependencies]
dioxus = "0.7"
gloo-worker = "0.6"
serde = { version = "1", features = ["derive"] }
# No exact pin needed: the worker bundle is post-processed by the
# wasm-bindgen-cli-support library (see app/build.rs), which the shared
# lockfile keeps at the same version as this crate.
wasm-bindgen = "0.2"

[package]
name = "dioxus-tsne"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dioxus + WebAssembly components to run and visualize Barnes-Hut t-SNE in the browser, off the main thread in a web worker"
readme = "README.md"
keywords = ["dioxus", "tsne", "pca", "visualization", "wasm"]
categories = ["visualization", "wasm", "gui"]

[dependencies]
# Arrow IPC / Feather reading plus the shared Arrow record-batch reader that
# Parquet ingestion also goes through. lz4 only: zstd's backend pulls a C
# library that does not build on wasm32-unknown-unknown.
arrow-array = "58"
arrow-cast = "58"
arrow-ipc = { version = "58", default-features = false, features = ["lz4"] }
arrow-schema = "58"
bhtsne = { git = "https://github.com/frjnn/bhtsne", default-features = false, features = ["wasm_js"] }
bytes = "1"
csv = "1"
dioxus.workspace = true
dioxus-free-icons = { version = "0.10.0", default-features = false, features = [
    "font-awesome-solid",
    "font-awesome-brands",
] }
gloo-net = { version = "0.7.0", default-features = false, features = ["http"] }
gloo-worker.workspace = true
js-sys = "0.3"
# Already pulled in transitively by bhtsne, declared directly so the worker can
# report rayon's global pool size (the active thread count) back to the UI.
rayon = "1"
# Pulled in transitively by bhtsne (via realfft) for FIt-SNE's FFT. Declared
# directly only to flip on its `wasm_simd` feature, which gives a vectorized
# wasm32 FFT when the worker is built with the `simd128` target feature.
rustfft = { version = "6", features = ["wasm_simd"] }
nalgebra = "0.35.0"
# Parquet ingestion through the Arrow reader. Snappy is the only compression
# enabled: it is the Parquet default, and the gzip backend (flate2) does not
# build on wasm32-unknown-unknown.
parquet = { version = "58", default-features = false, features = [
    "arrow",
    "snap",
] }
send_wrapper = "0.6.0"
serde.workspace = true
wasm-bindgen.workspace = true
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobEvent",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "MediaQueryList",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaStream",
    "TextMetrics",
    "Url",
    "Window",
] }

[dev-dependencies]
serde_json = "1.0.150"
