[package]
name = "decompositions-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
dioxus = { workspace = true, features = ["web"] }
dioxus-decompositions = { path = ".." }

[build-dependencies]
# Runs wasm-bindgen as a library on the worker bundle, see build.rs. Must
# resolve to the same version as the wasm-bindgen crate, which the shared
# lockfile takes care of.
wasm-bindgen-cli-support = "0.2"
