[package]
name = "decompositions-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { workspace = true, features = ["web"] }
dioxus-tsne = { path = ".." }

[build-dependencies]
# Runs wasm-bindgen as a library on the worker bundle, see build.rs. Must
# resolve to the same version as the wasm-bindgen crate, which the shared
# lockfile takes care of.
wasm-bindgen-cli-support = "0.2"
# Optimizes the worker wasm (the heavy numeric path) in release builds. dx
# wasm-opts the main app but not our separately built worker, see build.rs.
wasm-opt = "0.116"
