[package]
name = "decompositions-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
console_error_panic_hook = "0.1"
dioxus-decompositions = { path = ".." }
gloo-worker.workspace = true
wasm-bindgen.workspace = true

[[bin]]
name = "decompositions_worker"
path = "src/main.rs"
