[package]
name = "decompositions-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
console_error_panic_hook = "0.1"
dioxus-decompositions = { path = ".." }
gloo-worker.workspace = true
wasm-bindgen.workspace = true
# Multi-threads bhtsne's internal rayon parallelism in the browser through a
# SharedArrayBuffer worker pool. `no-bundler` is required because dx serves raw
# ES modules with no webpack/vite to rewrite the worker import paths.
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"], optional = true }

[features]
# Builds the worker as a SharedArrayBuffer rayon thread pool, so bhtsne's
# internal parallelism runs multi-threaded in the browser. Off by default
# because it needs a nightly atomics + build-std compile (wired up by
# app/build.rs when DECOMPOSITIONS_WORKER_THREADS is set) and cross-origin
# isolation headers at serve time. The plain build stays single threaded and
# compiles on stable.
threads = ["dep:wasm-bindgen-rayon"]

[[bin]]
name = "decompositions_worker"
path = "src/main.rs"
