[package]
name = "decompositions-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
console_error_panic_hook = "0.1"
dioxus-tsne = { path = ".." }
gloo-worker.workspace = true
wasm-bindgen.workspace = true
# Multi-threads bhtsne's internal rayon parallelism in the browser through a
# SharedArrayBuffer worker pool. `no-bundler` is required because dx serves raw
# ES modules with no webpack/vite to rewrite the worker import paths. Not
# optional: a single-threaded worker is unusably slow on real datasets, so the
# pool is the only build. It needs a nightly atomics + build-std compile (driven
# by app/build.rs) and cross-origin isolation headers at serve time.
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }

[[bin]]
name = "decompositions_worker"
path = "src/main.rs"
